--- a/client/src/pages/Landing/components/Suggestions/Suggestions.css
+++ b/client/src/pages/Landing/components/Suggestions/Suggestions.css
@@ -1,6 +1,6 @@
 .suggestion-container {
-  height: 600px;
-  width: 1000px;
+  height: max-content;
+  width: 100%;
   /* border: 1px solid; */
   border-radius: 5px;
   /* margin-top: 10px; */
@@ -8,8 +8,6 @@
   /* box-shadow: 5px 5px ; */
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  padding: 20px;
-  padding-left: 30px;
 }
 
 .trends-images {
