--- a/client/src/pages/Search/Search.css
+++ b/client/src/pages/Search/Search.css
@@ -8,7 +8,7 @@
 
 .searchbar {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: flex-start;
   margin-top: 20px;
   /* background-color: #1183d6; */
